--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,19 @@ include:
   - PULL_REQUEST_TEMPLATE.md
 
 theme: jekyll-theme-leap-day
+
+
+jekyll-archives:
+  enabled: all
+  layouts:
+    year: archive/year
+    month: archive/month
+    day: archive/day
+    tag: archive/tag
+    category: archive/category
+  permalinks:
+    year: '/:year/'
+    month: '/:year/:month/'
+    day: '/:year/:month/:day/'
+    tag: '/tags/:name/'
+    category: '/category/:name/'
